--- a/tidy.qmd
+++ b/tidy.qmd
@@ -3,6 +3,7 @@ title: "Tidy Data"
 format: 
   html:
      code-fold: true
+     code-summary: "Show the code"
 ---
 
 ```{r}
@@ -58,7 +59,7 @@ Results of bat sound analysis can be untidy:
 * two of more columns with species of same date and time.
 * Longitude and Latitude columns with missing values
 
-While the bat survey results shown in Table @tbl-tidy is an example of a _tidy_ data set; the data sets in Tables \@ref(tab:table02) and @tbl-untidy1 are _untidy_ and would need to be made tidy to undertake analysis.
+While the bat survey results shown in Table @tbl-tidy is an example of a _tidy_ data set; the data sets in @tbl-untidy1 and @tbl-untidy2 are _untidy_ and would need to be made tidy to undertake analysis.
 
 Data preparation is not just a first step but must be repeated many times over during analysis; as new problems come to light, or new data is collected. Apart from making bat data into a _tidy format_, there are many other tasks involved in cleaning data: parsing dates and numbers, identifying missing values, correcting character encodings, matching similar but not identical values (such as those created by typos).
 
@@ -75,6 +76,7 @@ Table <- static_data %>% # static_data is a tidy data set from the iBats package
 knitr::kable(Table)
 ```
 
+### Too Many Species in a Cell
 
 ```{r}
 #| label: tbl-untidy1
@@ -92,11 +94,27 @@ DateTime <- c("2019-10-03 20:55:30",
               "2019-10-03 21:25:30",
               "2019-10-03 21:35:30")
 
-Table <- tibble(DateTime, Species)
+untidy1 <- tibble(DateTime, Species)
 
-knitr::kable(Table)
+knitr::kable(untidy1)
 
 ```
+
+Too many species in a cell, as in @tbl-untidy1, can be made tidy by expanding the data so each species observed is in it's own row; as shown below in @tbl-tidied1
+
+```{r}
+#| code-fold: show
+#| label: tbl-tidied1
+#| tbl-cap: "Tidied Bat Data from Too Many Species in a Cell"
+
+tidied1 <- untidy1 %>% 
+  tidyr::separate_rows(Species)
+
+knitr::kable(tidied1)
+
+```
+
+### A Column of Bat Counts
 
 ```{r tab.cap="Untidy Bat Data a Column of Counting the Bats", tab.id="table03"}
 #| label: tbl-untidy2
@@ -119,7 +137,22 @@ Species <- c("Pipistrellus pipistrellus",
 
 Number <- c(1, 1, 2, 1, 3, 1)
 
-Table <- tibble(DateTime, Species, Number)
+untidy2 <- tibble(DateTime, Species, Number)
 
-knitr::kable(Table)
+knitr::kable(untidy2)
+```
+
+
+A count of species, as in @tbl-untidy2, can be made tidy by un-counting the data so each species observed is in it's own row; as shown below in @tbl-tidied2
+
+```{r}
+#| code-fold: show
+#| label: tbl-tidied2
+#| tbl-cap: "Tidied Bat Data with the Column Bats Un-counted"
+
+tidied2 <- untidy2 %>% 
+  tidyr::uncount(Number)
+
+knitr::kable(tidied2)
+
 ```
