Night column added

--- a/meta.qmd
+++ b/meta.qmd
@@ -12,12 +12,61 @@ format:
 library(knitr)
 library(tidyverse)
 library(iBats)
+library(gt)
 
 
 ```
 
 Many other columns would be added to a tidy dataset so it becomes more useful for analysis; some of these are described below.
 
-## The _Night_ 
+## Date and Time Information
+
+### The _Night_ 
 
 Bats are active through the night; the date of the night is the date at sunset and lasts to sunrise the morning of the following day. The _Night_ is a variable column that is added to the _tidy_ data; it is useful convention that helps avoid the confusion of having contiguous bat activity over two dates.
+
+The _Night_ can be obtained from the _iBats_ package using the `date_time_info` function. It requires a
+data.frame or tibble with a `DateTime` column, the time zone can be specified the default is `Europe/London`.  
+
+
+The code below takes the `static_data` set from the _iBats_ package and adds the _Night_ column, @tbl-night shows a random selection of 5 rows from the `static_data` set.
+
+```{r}
+#| code-fold: show
+
+
+static_data_with_night <- iBats::date_time_info(static_data)
+
+```
+
+
+```{r}
+#| label: tbl-night
+#| tbl-cap: "The Night from a DateTime Column"
+
+static_data_with_night %>% 
+  sample_n(5) %>% 
+  select(Description, Night, DateTime, Species, Latitude, Longitude) %>% 
+  #Table made with library(gt)
+  gt() %>% 
+  tab_style(
+    style = list(
+      cell_fill(color = "midnightblue"),
+      cell_text(color = "white"),
+      cell_text(weight = "bold")
+      ),
+    locations = cells_body(
+      columns = Night
+    )
+  ) %>% 
+  tab_style(
+    style = list(
+      cell_fill(color = "midnightblue"),
+      cell_text(color = "white"),
+      cell_text(weight = "bold")
+      ),
+    locations = cells_column_labels(
+      columns = Night
+    )
+  )
+```
